# eganet-python

./: .gitignore  CITATION.cff  README.md  pyproject.toml
eganet/: __init__.py
eganet/core/: __init__.py  boot_ega.py  dyn_ega.py  ega.py  hier_ega.py  ri_ega.py
eganet/correlation/: __init__.py  auto.py  cosine.py  polychoric.py
eganet/data/: __init__.py  datasets.py
eganet/information/: __init__.py  clustering.py  entropy.py  ergodicity.py  jsd.py  tefi.py  total_cor.py
eganet/network/: __init__.py  community.py  comparison.py  estimation.py  fit.py  metrics.py  predictability.py  regularization.py
eganet/plotting/: __init__.py  colors.py  comparison.py  network.py  stability.py
eganet/psychometrics/: __init__.py  cfa.py  diagnostics.py  invariance.py  lct.py  net_loads.py  net_scores.py  stability.py  uva.py
eganet/simulation/: __init__.py  glla.py  known_graph.py  sim_dfm.py  sim_egm.py
eganet/utils/: __init__.py  conversion.py  embedding.py  helpers.py
